<resources>
    <string name="app_name">Бизнес 05</string>

    <!-- menus -->
    <string name="menu_home">Главная</string>
    <string name="menu_checklist">История покупок</string>
    <string name="menu_news">Новости</string>
    <string name="menu_profile">Личный кабинет</string>
    <string name="menu_enter_phone">Вход</string>
    <string name="menu_enter_code">Подтверждение номера</string>
    <string name="menu_sign_up">Регистрация</string>
    <string name="menu_sign_in">Вход</string>
    <string name="menu_send_complaint">Отправить жалобу</string>

    <string name="sign_in">Далее</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_in_subtitle">Войдите или зарегистрируйтесь по e-mail и номеру телефона</string>
    <string name="email_title">E-mail:</string>
    <string name="email_hint">magomedov_m@gmail.com</string>
    <string name="phone_hint">9001234567</string>
    <string name="masked_phone_hint">+7 (900)123–45–67</string>
    <string name="password_title">Пароль:</string>
    <string name="password_hint">123456</string>
    <string name="restore_password">Восстановить пароль?</string>
    <string name="sign_up_complete">Завершить</string>

    <!-- home screen -->
    <string name="home_description">Отсканируйте QR-code на чеке или введите данные с чека вручную</string>
    <string name="home_scan_qr_code">Сканировать QR код</string>
    <string name="home_number_fd">Номер ФД</string>
    <string name="home_number_fp">Номер ФП</string>
    <string name="home_number_fn">Номер ФД</string>
    <string name="home_send">Отправить</string>
    <string name="home_success_alert_title">Поздравляем!</string>
    <string name="home_success_alert_desc">Ваш чек зарегистрирован для участия в Акции “Требуй чек, выиграй приз!”, в котором именно, Вы,  можете стать обладателем призов!</string>
    <string name="home_success_alert_button">Понятно</string>

    <string name="last_name">Фамилия</string>
    <string name="first_name">Имя</string>
    <string name="middle_name">Отчество</string>
    <string name="phone">Номер телефона</string>
    <string name="email">E-mail</string>
    <string name="password">3434</string>
    <string name="sign_up_password">Пароль</string>
    <string name="birth_date">Дата рождения</string>
    <string name="gender">Пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="done">Готово</string>

    <string name="profile_title">Личный кабинет</string>
    <string name="upload_photo">Загрузите\nфото</string>
    <string name="profile_save">Сохранить изменения</string>
    <string name="is_empty_error">Заполните поле</string>
    <string name="is_invalid_error">Заполните поле правильно</string>
    <string name="exit_dialog_text">Вы уверенны, что хотите выйти?</string>
    <string name="btn_cancel">Отменить</string>
    <string name="btn_yes">Да, уверен</string>

    <string name="isNoNetwork">Вы не подключены к интернету</string>
    <string name="checkYourInternetConnection">Проверьте ваше соединение с интернетом</string>
    <string name="errorLoadingData">Ошибка соедения с сервером</string>
    <string name="try_again">Повторить попытку</string>
    <string name="cancel">Отмена</string>

    <string name="history_transactions">История покупок</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="last_transactions">Последние платежи</string>

    <plurals name="number_of_seconds">
        <item quantity="one">%d секунда</item>
        <item quantity="few">%d секунды</item>
        <item quantity="other">%d секунд</item>
    </plurals>

    <string-array name="array_months">
        <item>Января</item>
        <item>Февраля</item>
        <item>Марта</item>
        <item>Апреля</item>
        <item>Мая</item>
        <item>Июня</item>
        <item>Июля</item>
        <item>Августа</item>
        <item>Сентября</item>
        <item>Октября</item>
        <item>Ноября</item>
        <item>Декабря</item>
    </string-array>

    <string-array name="type_list">
        <item>Приход</item>
        <item>Возврат прихода</item>
        <item>Расход</item>
        <item>Возврат расхода</item>
    </string-array>

    <string name="edit_profile">Редактировать профиль</string>
    <string name="incorrect_auth_data">Неверный E-mail или Пароль</string>
    <string name="sign_up_subtitle">Заполните поля\nдля регистрации аккаунта</string>
    <string name="sign_up_email_hint">Email (не обязательно)</string>
    <string name="profile_logout">Выход</string>

    <string name="error_unknown">Неизвестная ошибка</string>
    <string name="error_network">Ошибка сети</string>
    <string name="error_network_get_response">Не удалось получить ответ ошибки</string>
    <string name="error_network_convert_response">Не удалось сконвертировать ответ ошибки</string>
    <string name="error_load_data">Не удалось загрузить данные</string>

    <!-- No Network -->
    <string name="no_network_title">Вы не подключены к интернету</string>
    <string name="no_network_subtitle">Проверьте ваше соединение\nс интернетом и повторите попытку</string>

    <!-- Enter Phone -->
    <string name="enter_phone_title">Войдите или зарегистрируйтесь\nпо номеру телефона</string>
    <string name="enter_phone_next">Далее</string>

    <!-- Enter Code -->
    <string name="enter_code_timer">Запросить SMS-код повторно\nможно через %1$s</string>
    <string name="enter_code_send_again">Запросить код повторно</string>
    <string name="enter_code_wrong_phone">Неверный номер?</string>
    <string name="enter_code_send_code">Отправить код</string>
    <string name="enter_phone_sms_error">Sms-код уже отправлен. Им можно воспользоваться в течение 120 секунд</string>

    <!-- Checklist -->
    <string name="checklist_empty_title">У вас пока нет истории покупок</string>
    <string name="checklist_empty_description">Сканируйте чеки после покупок и\nрегистрируйтесь в акции!</string>
    <string name="checklist_check_status_hint">Статус чека:</string>
    <string name="checklist_check_status_illegal">Не легален</string>
    <string name="checklist_check_status_registered">Зарегистрирован</string>
    <string name="checklist_check_status_legal">Легален</string>
    <string name="checklist_check_status_in_the_treatment">В обработке</string>
    <!-- dialog start -->
    <string name="checklist_check_dialog_status_title">Выберите тип чека</string>
    <string name="checklist_check_dialog_status_all">Все чеки</string>
    <string name="checklist_check_dialog_status_illegal">Не легальные</string>
    <string name="checklist_check_dialog_status_registered">Зарегистрированные</string>
    <string name="checklist_check_dialog_status_legal">Легальные</string>
    <string name="checklist_check_dialog_status_in_the_treatment">В обработке</string>
    <!-- dialog end -->

    <!-- Send complaint -->
    <string name="send_complaint_text">Отправить жалобу</string>
    <string name="send_complaint_description">Заполните поля с информацией об инциденте, чтобы мы предприняли меры</string>
    <string name="send_complaint_title_complete">Ваша жалоба принята!</string>
    <string name="send_complaint_msg_complete">Спасибо за обратную связь. Мы рассмотрим вашу заявку и примем необходимые меры!</string>
    <string name="send_complaint_alert_button">Понятно</string>
    <!-- Hints start -->
    <string name="send_complaint_problem_description_hint">Описание проблемы</string>
    <string name="send_complaint_billing_address_hint">Адрес места рассчета</string>
    <string name="send_complaint_type_violation_hint">Вид нарушения</string>
    <string name="send_complaint_subject_calculation_hint">Предмет расчета</string>
    <string name="send_complaint_product_service_description_hint">Описание товара/услуги</string>
    <string name="send_complaint_inn_hint">ИНН</string>
    <string name="send_complaint_date_and_time_hint">Дата и время рассчета</string>
    <string name="send_complaint_type_of_cash_receipt">Вид кассового чека</string>
    <string name="send_complaint_payment_type">Способ оплаты</string>
    <string name="send_complaint_check_amount">Сумма чека</string>
    <string name="checklist_toolbar_menu_filter">Фильтр</string>
    <!-- Hints end -->
</resources>