<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.auth.enterphone.entercode.ui.EnterCodeFragment">

    <include
        android:id="@+id/signInToolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/TextView_authFragment_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="54dp"
        android:gravity="center"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textColor="@color/textDescription"
        android:text="@string/sign_in_subtitle"
        android:textSize="@dimen/text_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInToolbar" />

    <TextView
        android:id="@+id/TextView_authFragment_emailTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/email_title"
        android:textColor="@color/textDescription"
        android:textSize="@dimen/text_premid"
        app:layout_constraintBottom_toBottomOf="@+id/emailEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/emailEdit" />

    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="34dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_premid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/passwordEdit"
        app:layout_constraintTop_toBottomOf="@+id/TextView_authFragment_desc" />

    <TextView
        android:id="@+id/TextView_authFragment_passwordTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/password_title"
        android:textColor="@color/textDescription"
        android:textSize="@dimen/text_premid"
        app:layout_constraintBottom_toBottomOf="@+id/passwordEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/passwordEdit" />

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="34dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_premid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TextView_authFragment_passwordTitle"
        app:layout_constraintTop_toBottomOf="@+id/emailEdit" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawableStart="@drawable/ic_info"
        android:drawablePadding="8dp"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/text_min"
        android:text="@string/incorrect_auth_data"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/TextView_authFragment_passwordTitle"
        app:layout_constraintEnd_toEndOf="@id/passwordEdit"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdit"/>

    <FrameLayout
        android:id="@+id/signInFrame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="98dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorText" >

        <Button
            android:id="@+id/signInButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_disabled"
            android:enabled="true"
            android:focusable="true"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </FrameLayout>

    <ProgressBar
        android:id="@+id/signInProgress"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="20dp"
        android:theme="@style/WhiteProgressBar"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/signInFrame"
        app:layout_constraintEnd_toEndOf="@id/signInFrame"
        app:layout_constraintTop_toTopOf="@id/signInFrame"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/restorePasswordText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:fontFamily="@font/sf_pro_display_medium"
        android:text="@string/restore_password"
        android:textColor="@color/hintTitle"
        android:textSize="@dimen/text_premid"
        app:layout_constraintEnd_toEndOf="@id/signInFrame"
        app:layout_constraintStart_toStartOf="@+id/signInFrame"
        app:layout_constraintTop_toBottomOf="@+id/signInFrame" />

    <TextView
        android:id="@+id/registrationText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:fontFamily="@font/sf_pro_display_medium"
        android:text="@string/sign_up"
        android:textColor="@color/textDescription"
        android:textSize="@dimen/text_premid"
        app:layout_constraintEnd_toEndOf="@id/signInFrame"
        app:layout_constraintStart_toStartOf="@+id/signInFrame"
        app:layout_constraintTop_toBottomOf="@+id/restorePasswordText" />

</android.support.constraint.ConstraintLayout>